--- a/styles.css
+++ b/styles.css
@@ -90,7 +90,7 @@ section#introduction {
 }
 .hero-image.sc-room {
     height: 500px;
-    background-image: url(./img/photos/SC_room.jpg);
+    background-image: url(./img/photos/Surgery-Room.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
