--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ section#introduction {
 }
 .hero-image.sc-room {
     height: 450px;
-    background-image: url(./img/photos/Surgery-Room.jpg);
+    background-image: url(./img/photos/OR-Photo.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
