--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
 }
 html, body {
     font-size: 16px; 
-    max-width: 1920px;
+    max-width: 1680px;
+    margin: 0 auto;
 }
 body {
     /* background: #FFFAFA; */
@@ -93,10 +94,10 @@ section#introduction {
     line-height: 1.8;
 }
 .hero-image.sc-room {
-    height: 450px;
+    height: 560px;
     background-image: url(./img/photos/OR-Photo.jpg);
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center 52%;
     background-size: cover;
     max-height: 45vw;
 }
