--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
 * {
     box-sizing: border-box;
 }
+html {
+    scroll-behavior: smooth;
+
+}
 html, body {
     font-size: 16px; 
     max-width: 1680px;
@@ -53,9 +57,45 @@ header {
     max-width: calc(100% - 100px);
     display: block;
     margin: 0 auto;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+}
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    font-family: 'Heebo', sans-serif;
+    text-transform: uppercase;
+    font-size: 1.1rem;
+    margin-bottom: 10px;
 }
 
+nav a, nav a:visited {
+    padding: 15px 50px;
+    color: rgb(127, 127, 127);
+    text-decoration: none;
+    position: relative;
+    transition: all .2s;
+    cursor: pointer;
+    outline: none !important;
+}
+nav a:hover {
+    color: rgb(39, 101, 134);
+    cursor: pointer;
+}
+nav a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    right: 50%;
+    height: 3px;
+    background: rgb(39, 101, 134);
+    transition: all .2s;
+}
+nav a:hover::after {
+    left: 0;
+    right: 0;
+}
 .contact-callout {
     text-align: right;
     color: rgb(39, 101, 134) !important;
@@ -390,6 +430,16 @@ section#hours-and-location  a:hover {
     font-size: 1.1em;
     line-height: 1.3;
   }
+  #burger, label[for="burger"] {
+    display: none;
+}
+.nav-wrapper #sc-logo {
+    opacity: 0;
+    transition: opacity .3s;
+    transition-delay: 0s;
+    height: 0px;
+    margin-top: 15px;
+}
   /* ===Media Queries=== */
 
   @media only screen and (max-width: 980px) {
@@ -428,11 +478,116 @@ section#hours-and-location  a:hover {
     #vvi-logo {
         max-height: 75px;
     }
+    label[for="burger"] {
+        display: block;
+    }
+
+    header .nav-container {
+        display: flex;
+        flex-direction: column;
+    }
+    header .nav-container nav {
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-container label {
+        position: absolute;
+        top: 45px;
+        right: 15px;
+        height: 20px;
+        width: 20px;
+        z-index: 5;
+      }
+      .nav-container label span {
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        top: 50%;
+        margin-top: -1px;
+        left: 0;
+        display: block;
+        background: #020304;
+        transition: 0.3s;
+      }
+      .nav-container label span:first-child {
+        top: 3px;
+      }
+      .nav-container label span:last-child {
+        top: 16px;
+      }
+      .nav-container label:hover {
+        cursor: pointer;
+      }
+      .nav-container input:checked + label {
+          position: fixed;
+          top: 40px;
+      }
+      .nav-container input:checked + label span {
+        opacity: 0;
+        top: 50%;
+      }
+      .nav-container input:checked + label span:first-child {
+        opacity: 1;
+        transform: rotate(405deg);
+      }
+      .nav-container input:checked + label span:last-child {
+        opacity: 1;
+        transform: rotate(-405deg);
+      }
+      .nav-container input ~ .nav-wrapper {
+        background: white;
+        position: fixed;
+        top: 0px;
+        left: 0;
+        width: 100%;
+        height: 100px;
+        z-index: 3;
+        transition: 0.3s;
+        transition-delay: 0.2s;
+        overflow: hidden;
+        visibility: hidden;
+      }
+      .nav-container input ~ .nav-wrapper ul {
+        text-align: center;
+        position: absolute;
+        top: 35%;
+        left: 20%;
+        right: 20%;
+      }
+      .nav-container input ~ .nav-wrapper ul > li {
+        opacity: 0;
+        transition: 0.5s;
+        transition-delay: 0s;
+      }
+      .nav-container input ~ .nav-wrapper ul > li > a {
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #020304;
+        font-weight: 700;
+        font-family: sans-serif;
+        display: block;
+        padding: 30px;
+      }
+      .nav-container input:checked ~ .nav-wrapper {
+        height: 100%;
+        transition-delay: 0s;
+        visibility: visible;
+      }
+      .nav-container input:checked ~ .nav-wrapper #sc-logo {
+        opacity: 1;
+        height: auto;
+    }
+      .nav-container input:checked ~ .nav-wrapper ul > li {
+        opacity: 1;
+        transition-delay: 0.3s;
+      }
+
+    #vvi-logo {
+        margin-bottom: 15px;
+    }
   }
   @media only screen and (max-width: 500px) {
-    nav {
-        display: none;
-    }
+
     #hours-and-location {
         flex-wrap: wrap;
         align-items: stretch;
@@ -452,5 +607,10 @@ section#hours-and-location  a:hover {
     .tagline {
         font-size: 1.7em;
         line-height: 1.5;
+    }
+  }
+  @media only screen and (max-width: 900px) {
+    #sc-logo, #vvi-logo {
+        max-width: 285px;
     }
   }
