--- a/styles.css
+++ b/styles.css
@@ -356,6 +356,10 @@ section#hours-and-location  a:hover {
       color: #fff;
       text-align: center;
       position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
   }
   #covid-button {
       background-color: transparent;
@@ -364,7 +368,8 @@ section#hours-and-location  a:hover {
       border-radius: 1px;
       padding: 2px 6px;
       margin-left: 10px;
-      cursor: pointer;
+    margin-right: 30px;
+    cursor: pointer;
       transition: background-color .2s;
   }
   #covid-button:hover {
