--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ nav a, nav a:visited {
     color: rgb(127, 127, 127);
     text-decoration: none;
     position: relative;
-    transition: all .2s;
+    /* transition: all .2s; */
     cursor: pointer;
     outline: none !important;
 }
@@ -442,19 +442,31 @@ section#hours-and-location  a:hover {
   #burger, label[for="burger"] {
     display: none;
 }
-.nav-wrapper #sc-logo {
-    opacity: 0;
-    transition: opacity .3s;
-    transition-delay: 0s;
-    height: 0px;
-    margin-top: 15px;
+#hamburger-sc-logo {
+    display: none;
+    margin-top: 20px;
+   	max-height: 100px;
+  	max-width: calc(100% - 100px);
+   	margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
 }
   /* ===Media Queries=== */
 
   @media only screen and (max-width: 980px) {
+
     #sc-logo {
         margin-bottom: 15px;
     }
+
+    #vvi-logo {
+        max-width: 285px;
+    }
+
+    #hamburger-sc-logo {
+        display: block
+    }
+
     .hero-image {
         margin-top: 15px;
     }
@@ -549,12 +561,11 @@ section#hours-and-location  a:hover {
         top: 0px;
         left: 0;
         width: 100%;
-        height: 100px;
+        height: 1px;
         z-index: 3;
-        transition: 0.3s;
+        transition: height 0.3s ease-in-out;
         transition-delay: 0.2s;
         overflow: hidden;
-        visibility: hidden;
       }
       .nav-container input ~ .nav-wrapper ul {
         text-align: center;
@@ -565,8 +576,8 @@ section#hours-and-location  a:hover {
       }
       .nav-container input ~ .nav-wrapper ul > li {
         opacity: 0;
-        transition: 0.5s;
-        transition-delay: 0s;
+        /* transition: 0.5s;
+        transition-delay: 0s; */
       }
       .nav-container input ~ .nav-wrapper ul > li > a {
         text-decoration: none;
@@ -579,16 +590,15 @@ section#hours-and-location  a:hover {
       }
       .nav-container input:checked ~ .nav-wrapper {
         height: 100%;
-        transition-delay: 0s;
+        /* transition-delay: 0s; */
         visibility: visible;
       }
-      .nav-container input:checked ~ .nav-wrapper #sc-logo {
-        opacity: 1;
-        height: auto;
+      .nav-container input:checked ~ .nav-wrapper #hamburger-sc-logo {
+       display: block;
     }
       .nav-container input:checked ~ .nav-wrapper ul > li {
         opacity: 1;
-        transition-delay: 0.3s;
+        /* transition-delay: 0.3s; */
       }
 
     #vvi-logo {
@@ -618,8 +628,7 @@ section#hours-and-location  a:hover {
         line-height: 1.5;
     }
   }
-  @media only screen and (max-width: 900px) {
-    #sc-logo, #vvi-logo {
-        max-width: 285px;
-    }
+  @media only screen and (max-width: 980px) {
+    
+
   }
