--- a/styles.css
+++ b/styles.css
@@ -2,21 +2,26 @@
 * {
     box-sizing: border-box;
 }
+
 html {
     scroll-behavior: smooth;
 
 }
-html, body {
-    font-size: 16px; 
+
+html,
+body {
+    font-size: 16px;
     max-width: 1680px;
     margin: 0 auto;
 }
+
 body {
     /* background: #FFFAFA; */
     /* max-width: 1440px; */
     margin: 0 auto;
     font-family: 'Lato', sans-serif;
 }
+
 h3 {
     font-family: 'Heebo', sans-serif;
     text-transform: uppercase;
@@ -24,27 +29,33 @@ h3 {
     font-size: 1.5em;
     margin: 0;
 }
+
 p {
     margin-top: 0px !important;
 }
+
 p.text-compressed {
     line-height: 1.5;
     margin-bottom: 12px;
 }
+
 fieldset {
     border: none;
     margin: 0;
     display: flex;
     flex-direction: column;
 }
+
 fieldset legend {
     display: none;
 }
+
 main {
     display: flex;
     flex-direction: column;
     align-items: stretch;
 }
+
 /* ===PRIMARY=== */
 
 /* ===HEADER=== */
@@ -52,6 +63,7 @@ header {
     padding: 20px 20px 0;
     position: relative;
 }
+
 #sc-logo {
     max-height: 100px;
     max-width: calc(100% - 100px);
@@ -59,6 +71,7 @@ header {
     margin: 0 auto;
     margin-bottom: 10px;
 }
+
 nav {
     display: flex;
     flex-direction: row;
@@ -69,7 +82,8 @@ nav {
     margin-bottom: 10px;
 }
 
-nav a, nav a:visited {
+nav a,
+nav a:visited {
     padding: 15px 50px;
     color: rgb(127, 127, 127);
     text-decoration: none;
@@ -78,10 +92,12 @@ nav a, nav a:visited {
     cursor: pointer;
     outline: none !important;
 }
+
 nav a:hover {
     color: rgb(39, 101, 134);
     cursor: pointer;
 }
+
 nav a::after {
     content: '';
     position: absolute;
@@ -92,6 +108,7 @@ nav a::after {
     background: rgb(39, 101, 134);
     transition: all .2s;
 }
+
 nav a:hover::after {
     left: 0;
     right: 0;
@@ -100,6 +117,7 @@ nav a:hover::after {
 nav a.current-page {
     color: rgb(49, 129, 172)
 }
+
 .contact-callout {
     text-align: right;
     color: rgb(39, 101, 134) !important;
@@ -107,29 +125,34 @@ nav a.current-page {
     right: 20px;
     top: 20px;
 }
-.contact-callout a.phone-link, 
+
+.contact-callout a.phone-link,
 .contact-callout a.phone-link:visited {
     color: rgb(39, 101, 134) !important;
     text-decoration: none;
 }
+
 .contact-callout a.phone-link:hover {
     text-decoration: underline;
 }
+
 .contact-callout .form-link {
     display: inline-block;
     text-transform: uppercase;
     text-decoration: none;
     padding: 6px 15px;
-    background: rgb(204,221,230);
+    background: rgb(204, 221, 230);
     color: #000;
     border-radius: 4px;
     text-align: center;
     font-size: 14px;
     margin-top: 10px;
 }
+
 .contact-callout .form-link:hover {
-    background: rgb(153,187,205);
+    background: rgb(153, 187, 205);
 }
+
 /* ===MAIN=== */
 /* Introduction Section */
 section#introduction {
@@ -137,6 +160,7 @@ section#introduction {
     font-size: 1.1rem;
     line-height: 1.8;
 }
+
 .hero-image.sc-room {
     height: 560px;
     background-image: url(./img/photos/OR-Photo.jpg);
@@ -145,27 +169,32 @@ section#introduction {
     background-size: cover;
     max-height: 45vw;
 }
+
 section#introduction article {
     padding: 2em 15%;
     /* padding: 2em calc(30vw - 200px); */
 }
+
 section#introduction article p:last-child {
-    border-bottom: 1px solid rgb(191,191,191);
+    border-bottom: 1px solid rgb(191, 191, 191);
     padding-bottom: 30px;
 
 }
+
 .tagline {
     font-size: 2em;
     font-style: italic;
     color: rgb(39, 101, 134);
     margin-bottom: 20px;
 }
+
 /* Details Section */
 section#details {
     font-size: 1.1rem;
-    line-height: 1.8;   
+    line-height: 1.8;
     padding: 0 15% 2em 15%;
 }
+
 /* Surgery Center Section */
 section#vvi-section .feature-link {
     display: flex;
@@ -174,7 +203,8 @@ section#vvi-section .feature-link {
     text-decoration: none;
     flex-wrap: wrap;
 }
-section#vvi-section .feature-link > * {
+
+section#vvi-section .feature-link>* {
     flex: 1 0 50%;
     align-items: center;
     display: flex;
@@ -182,17 +212,19 @@ section#vvi-section .feature-link > * {
     padding: 2em 3em;
     min-width: 400px;
 }
-.feature-link
-.feature-description {
-    background: rgb(39,93,118);
+
+.feature-link .feature-description {
+    background: rgb(39, 93, 118);
     color: #fff;
     transition: background .2s;
 }
+
 .feature-button {
     background-image: url(./img/blue-triangles.JPG);
     position: relative;
     z-index: 1;
 }
+
 .feature-button::after {
     content: '';
     background: #fff;
@@ -205,12 +237,15 @@ section#vvi-section .feature-link > * {
     z-index: 2;
     transition: opacity .2s;
 }
+
 section#vvi-section .feature-link:hover .feature-description {
-    background: rgba(39,93,118, .9);
+    background: rgba(39, 93, 118, .9);
 }
+
 section#vvi-section .feature-link:hover .feature-button::after {
     opacity: .6;
 }
+
 #vvi-logo {
     max-height: 90px;
     position: relative;
@@ -227,16 +262,20 @@ section#hours-and-location {
     /* padding: 2em calc(30vw - 200px); */
     justify-content: center;
 }
+
 section#hours-and-location :not(h3) {
     color: rgb(39, 101, 134) !important;
     font-style: normal;
 }
-section#hours-and-location  a {
+
+section#hours-and-location a {
     text-decoration: none;
 }
-section#hours-and-location  a:hover {
+
+section#hours-and-location a:hover {
     text-decoration: underline;
 }
+
 .hours-info {
     margin-right: 30px;
     line-height: 1.6;
@@ -244,12 +283,15 @@ section#hours-and-location  a:hover {
     flex-direction: column;
     justify-content: space-between;
 }
-.hours-info > div {
+
+.hours-info>div {
     margin-bottom: 10px;
 }
+
 .location-map iframe {
     width: 55vw;
 }
+
 /* ===FOOTER=== */
 #cohesion-logo {
     max-height: 115px;
@@ -270,50 +312,52 @@ section#hours-and-location  a:hover {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-  }
-  
-  /* Hide the browser's default checkbox */
-  .terms-container input {
+}
+
+/* Hide the browser's default checkbox */
+.terms-container input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
     height: 0;
     width: 0;
-  }
-  /* Create a custom checkbox */
+}
+
+/* Create a custom checkbox */
 .checkmark {
     position: absolute;
     top: 0;
     left: 0;
     height: 20px;
     width: 20px;
-    background-color: rgba(255,255,255,.1);
-    border: 1px solid rgba(255,255,255,.4)  }
-  
-  /* On mouse-over, add a grey background color */
-  .terms-container:hover input ~ .checkmark {
-    background-color: rgba(255,255,255,.4);
-  }
-  
-  /* When the checkbox is checked, add a blue background */
-  .terms-container input:checked ~ .checkmark {
+    background-color: rgba(255, 255, 255, .1);
+    border: 1px solid rgba(255, 255, 255, .4)
+}
+
+/* On mouse-over, add a grey background color */
+.terms-container:hover input~.checkmark {
+    background-color: rgba(255, 255, 255, .4);
+}
+
+/* When the checkbox is checked, add a blue background */
+.terms-container input:checked~.checkmark {
     background-color: #2196F3;
-  }
-  
-  /* Create the checkmark/indicator (hidden when not checked) */
-  .checkmark:after {
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
     content: "";
     position: absolute;
     display: none;
-  }
-  
-  /* Show the checkmark when checked */
-  .terms-container input:checked ~ .checkmark:after {
+}
+
+/* Show the checkmark when checked */
+.terms-container input:checked~.checkmark:after {
     display: block;
-  }
-  
-  /* Style the checkmark/indicator */
-  .terms-container .checkmark:after {
+}
+
+/* Style the checkmark/indicator */
+.terms-container .checkmark:after {
     left: 5px;
     top: 1px;
     width: 5px;
@@ -323,19 +367,23 @@ section#hours-and-location  a:hover {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
-  }
-  /* ===POPOVER=== */
-  .popover-title {
-    color: rgb(255,253,84);    
-  }
-  .popover-title:hover {
-      text-decoration: underline;
-  }
-  .popover-wrapper {
+}
+
+/* ===POPOVER=== */
+.popover-title {
+    color: rgb(255, 253, 84);
+}
+
+.popover-title:hover {
+    text-decoration: underline;
+}
+
+.popover-wrapper {
     position: relative;
     display: inline-block;
-  }
-  .popover-content {
+}
+
+.popover-content {
     display: none;
     position: absolute;
     background-color: #FFFAFA;
@@ -343,117 +391,134 @@ section#hours-and-location  a:hover {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     min-width: 400px;
     color: rgb(39, 101, 134);
-  }
-  .popover-wrapper:hover .popover-content {
+}
+
+.popover-wrapper:hover .popover-content {
     display: block;
     z-index: 10;
     bottom: calc(100% + 10px);
-  }
+}
+
 /* ===COVID Alert=== */
-  .covid-alert {
-      padding: 6px 12px;
-      background-color: #ff9800;
-      color: #fff;
-      text-align: center;
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-  }
-  #covid-button {
-      background-color: transparent;
-      color: #fff;
-      border: 1px solid #fff;
-      border-radius: 1px;
-      padding: 2px 6px;
-      margin-left: 10px;
+.covid-alert {
+    padding: 6px 12px;
+    background-color: #ff9800;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#covid-button {
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 1px;
+    padding: 2px 6px;
+    margin-left: 10px;
     margin-right: 30px;
     cursor: pointer;
-      transition: background-color .2s;
-  }
-  #covid-button:hover {
-      background-color: rgba(255,255,255,.2);
-      cursor: pointer;
-  }
-  #alert-dismiss {
-      position: absolute;
-      right: 12px;
-      color: #fff;
-      background-color: transparent;
-      cursor: pointer;
-      border: 0px solid transparent;
-      font-size: 1.3em;
-      border-radius: 1px;
-      transition: background-color .2s;
+    transition: background-color .2s;
+}
 
-  }
-  #alert-dismiss:hover {
-      background-color: rgba(255,255,255,.2);
-      cursor: pointer;
-  }
-  /* ===COVID Statement Modal=== */
-  .statement-container {
-      position: fixed;
-      opacity: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 99;
-      background-color: rgba(0,0,0,0.6);
-      overflow: auto;
-      transition: all .3s;
-  }
-  .statement-container.closed {
-      display: none;
-      opacity: 0;
-  }
-  .statement-content {
+#covid-button:hover {
+    background-color: rgba(255, 255, 255, .2);
+    cursor: pointer;
+}
+
+#alert-dismiss {
+    position: absolute;
+    right: 12px;
+    color: #fff;
+    background-color: transparent;
+    cursor: pointer;
+    border: 0px solid transparent;
+    font-size: 1.3em;
+    border-radius: 1px;
+    transition: background-color .2s;
+
+}
+
+#alert-dismiss:hover {
+    background-color: rgba(255, 255, 255, .2);
+    cursor: pointer;
+}
+
+/* ===COVID Statement Modal=== */
+.statement-container {
+    position: fixed;
+    opacity: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    background-color: rgba(0, 0, 0, 0.6);
+    overflow: auto;
+    transition: all .3s;
+}
+
+.statement-container.closed {
+    display: none;
+    opacity: 0;
+}
+
+.statement-content {
     margin: 15% auto;
     background: #fff;
     max-width: 800px;
     padding: 20px;
-  }
-  .statement-header {
+}
+
+.statement-header {
     color: rgb(39, 101, 134);
     font-size: 1.8em;
     display: flex;
     padding-bottom: 10px;
     justify-content: space-between;
-  }
-  .statement-close {
+}
+
+.statement-close {
     background-color: transparent;
     cursor: pointer;
     border: 0px solid transparent;
     border-radius: 1px;
     font-size: .9em;
     transition: background-color .2s;
-  }
-  .statement-close:hover {
-      cursor: pointer;
-      background-color: rgba(0,0,0,0.3);
+}
 
-  }
-  .statement-body {
+.statement-close:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.3);
+
+}
+
+.statement-body {
     font-size: 1.1em;
     line-height: 1.3;
-  }
-  #burger, label[for="burger"] {
+}
+
+#burger,
+label[for="burger"] {
     display: none;
 }
+
 #hamburger-sc-logo {
     display: none;
     margin-top: 20px;
-   	max-height: 100px;
-  	max-width: calc(100% - 100px);
-   	margin-left: auto;
+    max-height: 100px;
+    max-width: calc(100% - 100px);
+    margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
 }
-  /* ===Media Queries=== */
 
-  @media only screen and (max-width: 980px) {
+/* ===Media Queries=== */
+
+@media only screen and (max-width: 980px) {
 
     #sc-logo {
         margin-bottom: 15px;
@@ -470,6 +535,7 @@ section#hours-and-location  a:hover {
     .hero-image {
         margin-top: 15px;
     }
+
     .contact-callout {
         display: flex;
         align-items: center;
@@ -478,27 +544,36 @@ section#hours-and-location  a:hover {
         top: initial;
         right: initial;
     }
+
     .contact-callout .form-link {
         margin: 0 0 0 10px;
 
     }
-    section#introduction article, section#hours-and-location, section#contact {
+
+    section#introduction article,
+    section#hours-and-location,
+    section#contact {
         padding: 1em 5%;
     }
-  }
-  @media only screen and (max-width: 980px) {
-    section#vvi-section .feature-link > * {
+}
+
+@media only screen and (max-width: 980px) {
+    section#vvi-section .feature-link>* {
         flex-basis: 100%;
     }
+
     section#details {
         padding: 0 5%;
     }
+
     .feature-button {
         padding: 1.1em 3em !important;
     }
+
     #vvi-logo {
         max-height: 75px;
     }
+
     label[for="burger"] {
         display: block;
     }
@@ -507,10 +582,12 @@ section#hours-and-location  a:hover {
         display: flex;
         flex-direction: column;
     }
+
     header .nav-container nav {
         flex-direction: column;
         align-items: center;
     }
+
     .nav-container label {
         position: absolute;
         top: 45px;
@@ -518,8 +595,9 @@ section#hours-and-location  a:hover {
         height: 20px;
         width: 20px;
         z-index: 5;
-      }
-      .nav-container label span {
+    }
+
+    .nav-container label span {
         position: absolute;
         width: 100%;
         height: 2px;
@@ -529,33 +607,41 @@ section#hours-and-location  a:hover {
         display: block;
         background: #020304;
         transition: 0.3s;
-      }
-      .nav-container label span:first-child {
+    }
+
+    .nav-container label span:first-child {
         top: 3px;
-      }
-      .nav-container label span:last-child {
+    }
+
+    .nav-container label span:last-child {
         top: 16px;
-      }
-      .nav-container label:hover {
+    }
+
+    .nav-container label:hover {
         cursor: pointer;
-      }
-      .nav-container input:checked + label {
-          position: fixed;
-          top: 40px;
-      }
-      .nav-container input:checked + label span {
+    }
+
+    .nav-container input:checked+label {
+        position: fixed;
+        top: 40px;
+    }
+
+    .nav-container input:checked+label span {
         opacity: 0;
         top: 50%;
-      }
-      .nav-container input:checked + label span:first-child {
+    }
+
+    .nav-container input:checked+label span:first-child {
         opacity: 1;
         transform: rotate(405deg);
-      }
-      .nav-container input:checked + label span:last-child {
+    }
+
+    .nav-container input:checked+label span:last-child {
         opacity: 1;
         transform: rotate(-405deg);
-      }
-      .nav-container input ~ .nav-wrapper {
+    }
+
+    .nav-container input~.nav-wrapper {
         background: white;
         position: fixed;
         top: 0px;
@@ -566,20 +652,23 @@ section#hours-and-location  a:hover {
         transition: height 0.3s ease-in-out;
         transition-delay: 0.2s;
         overflow: hidden;
-      }
-      .nav-container input ~ .nav-wrapper ul {
+    }
+
+    .nav-container input~.nav-wrapper ul {
         text-align: center;
         position: absolute;
         top: 35%;
         left: 20%;
         right: 20%;
-      }
-      .nav-container input ~ .nav-wrapper ul > li {
+    }
+
+    .nav-container input~.nav-wrapper ul>li {
         opacity: 0;
         /* transition: 0.5s;
         transition-delay: 0s; */
-      }
-      .nav-container input ~ .nav-wrapper ul > li > a {
+    }
+
+    .nav-container input~.nav-wrapper ul>li>a {
         text-decoration: none;
         text-transform: uppercase;
         color: #020304;
@@ -587,48 +676,54 @@ section#hours-and-location  a:hover {
         font-family: sans-serif;
         display: block;
         padding: 30px;
-      }
-      .nav-container input:checked ~ .nav-wrapper {
+    }
+
+    .nav-container input:checked~.nav-wrapper {
         height: 100%;
         /* transition-delay: 0s; */
         visibility: visible;
-      }
-      .nav-container input:checked ~ .nav-wrapper #hamburger-sc-logo {
-       display: block;
     }
-      .nav-container input:checked ~ .nav-wrapper ul > li {
+
+    .nav-container input:checked~.nav-wrapper #hamburger-sc-logo {
+        display: block;
+    }
+
+    .nav-container input:checked~.nav-wrapper ul>li {
         opacity: 1;
         /* transition-delay: 0.3s; */
-      }
+    }
 
     #vvi-logo {
         margin-bottom: 15px;
     }
-  }
-  @media only screen and (max-width: 500px) {
+}
+
+@media only screen and (max-width: 500px) {
 
     #hours-and-location {
         flex-wrap: wrap;
         align-items: stretch;
         flex-direction: column;
     }
+
     .hours-info {
         flex-wrap: wrap;
         margin: 0;
         flex-direction: row;
     }
-    .hours-info > div {
+
+    .hours-info>div {
         flex: 1 0 50%;
     }
+
     .location-map iframe {
         width: 100%;
     }
+
     .tagline {
         font-size: 1.7em;
         line-height: 1.5;
     }
-  }
-  @media only screen and (max-width: 980px) {
-    
+}
 
-  }
+@media only screen and (max-width: 980px) {}
