hours-and-location section now haas 2em top/bottom padding after 980px breakpoint

--- a/styles.css
+++ b/styles.css
@@ -549,9 +549,12 @@ label[for="burger"] {
     }
 
     section#introduction article,
-    section#hours-and-location,
     section#contact {
         padding: 1em 5%;
+    }
+
+    section#hours-and-location {
+        padding: 2em 5%;
     }
 }
 
